--- a/src/main/resources/assets/gcys/lang/en_us.lang
+++ b/src/main/resources/assets/gcys/lang/en_us.lang
@@ -773,3 +773,8 @@ gcys.recipe.has_pressure_requirement=Has pressure requirement(s)
 # TOP
 gcys.top.pressure=Pressure: %sPa
 gcys.top.partial_pressure=%s: %sPa
+
+# Pressure Tooltip
+gcys.universal.tooltip.min_pressure=§bMin Pressure: §f%sPa (%s§f)
+gcys.universal.tooltip.max_pressure=§6Max Pressure: §f%sPa (%s§f)
+gcys.universal.tooltip.volume=§dGas Capacity: §f%,d L
