Fix 'taranium'： 塔兰 -> 塔兰金属

--- a/src/main/resources/assets/gcys/lang/zh_cn.lang
+++ b/src/main/resources/assets/gcys/lang/zh_cn.lang
@@ -128,12 +128,12 @@ material.thallium_copper_chloride=氯化铊铜
 material.perrhenic_acid=高铼酸
 material.ammonium_perrhenate=高铼酸铵
 material.thallium_sulfate=硫酸铊
-material.heavy_taranium_fuel=重塔兰燃料
-material.medium_taranium_fuel=塔兰燃料
-material.light_taranium_fuel=轻塔兰燃料
-material.heavy_enriched_taranium_fuel=重富集塔兰燃料
-material.medium_enriched_taranium_fuel=富集塔兰燃料
-material.light_enriched_taranium_fuel=轻富集塔兰燃料
+material.heavy_taranium_fuel=重塔兰金属燃料
+material.medium_taranium_fuel=塔兰金属燃料
+material.light_taranium_fuel=轻塔兰金属燃料
+material.heavy_enriched_taranium_fuel=重富集塔兰金属燃料
+material.medium_enriched_taranium_fuel=富集塔兰金属燃料
+material.light_enriched_taranium_fuel=轻富集塔兰金属燃料
 material.adamantite=精钢
 material.adamantium_unstable=不稳定精金
 material.orichalcum_energized=充能山铜
@@ -298,24 +298,24 @@ material.heavy_bedrock_smoke=重基岩烟
 material.medium_bedrock_smoke=中基岩烟
 material.light_bedrock_smoke=轻基岩烟
 material.ultralight_bedrock_smoke=超轻基岩烟
-material.heavy_taranium_gas=重塔兰气
-material.medium_taranium_gas=塔兰气
-material.light_taranium_gas=轻塔兰气
+material.heavy_taranium_gas=重塔兰金属气
+material.medium_taranium_gas=塔兰金属气
+material.light_taranium_gas=轻塔兰金属气
 material.bedrock_gas=基岩气
-material.cracked_heavy_taranium=氟裂解重塔兰
-material.cracked_medium_taranium=氟裂解塔兰
-material.cracked_light_taranium=氟裂解轻塔兰
+material.cracked_heavy_taranium=氟裂解重塔兰金属
+material.cracked_medium_taranium=氟裂解塔兰金属
+material.cracked_light_taranium=氟裂解轻塔兰金属
 material.enriched_bedrock_soot_solution=富集基岩尘溶液
 material.clean_enriched_bedrock_solution=纯净富集基岩尘溶液
 material.heavy_enriched_bedrock_smoke=重富集基岩烟
 material.medium_enriched_bedrock_smoke=富集基岩烟
 material.light_enriched_bedrock_smoke=轻富集基岩烟
-material.heavy_enriched_taranium_gas=重富集塔兰气
-material.medium_enriched_taranium_gas=富集塔兰气
-material.light_enriched_taranium_gas=轻富集塔兰气
-material.cracked_heavy_enriched_taranium=氡裂解重富集塔兰
-material.cracked_medium_enriched_taranium=氡裂解富集塔兰
-material.cracked_light_enriched_taranium=氡裂解轻富集塔兰
+material.heavy_enriched_taranium_gas=重富集塔兰金属气
+material.medium_enriched_taranium_gas=富集塔兰金属气
+material.light_enriched_taranium_gas=轻富集塔兰金属气
+material.cracked_heavy_enriched_taranium=氡裂解重富集塔兰金属
+material.cracked_medium_enriched_taranium=氡裂解富集塔兰金属
+material.cracked_light_enriched_taranium=氡裂解轻富集塔兰金属
 material.energetic_naquadria=充能硅岩合金
 material.light_hyper_fuel=轻超极燃料
 material.medium_hyper_fuel=超极燃料
@@ -748,9 +748,9 @@ recipemap.drill_recipes.name=钻取
 recipemap.suprachronal_assembler_recipes.name=超时空组装
 
 # Generators
-recipemap.taranium_reactor_mk1_recipes.name=塔兰反应堆 Mk II
-recipemap.taranium_reactor_mk2_recipes.name=塔兰反应堆 Mk II
-recipemap.taranium_reactor_mk3_recipes.name=塔兰超级反应堆 Mk III
+recipemap.taranium_reactor_mk1_recipes.name=塔兰金属反应堆 Mk II
+recipemap.taranium_reactor_mk2_recipes.name=塔兰金属反应堆 Mk II
+recipemap.taranium_reactor_mk3_recipes.name=塔兰金属超级反应堆 Mk III
 
 
 # Recipe Properties
